# advent-of-code-2024

./: .gitignore
day02/: part2.hs
day03/: day03.cabal  stack.yaml
day03/src/: part1.hs  part2.hs
day04/: day04.cabal
day04/src/: part1.hs  part2.hs
day05/: day05.cabal
day05/src/: part1.hs  part2.hs
day06/: day06.cabal
day06/exe/: part1.hs  part2.hs
day07/: day07.cabal
day07/src/: part1.hs  part2.hs
day08/: day08.cabal
day08/exe/: part1.hs  part2.hs
day13/: day13.cabal
day13/src/: part1.hs
day17/: day17.cabal
day17/src/: part1.hs  part2.hs
day22/: LICENSE  day22.cabal  run.sh
day22/exe/: part1.hs  part2.hs
day_01/: make.ps1  part1.hs  part2.hs
day_02/: part1.hs
