cabal-version:       2.2

name:                day06
version:             0.1.0.0
homepage:            https://github.com/Noir01/advent-of-code-2024/tree/main/day06
author:              Aniruddh Srivastava
maintainer:          aniruddh@noir.ac
copyright:           2024 Aniruddh Srivastava
category:            Web
build-type:          Simple

executable part1
  hs-source-dirs:      src
  main-is:             part1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -O2

--executable part2
--  hs-source-dirs:      src
--  main-is:             part2.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5
--  ghc-options:         -Wall
--                       -Wcompat
--                       -Widentities
--                       -Wincomplete-record-updates
--                       -Wincomplete-uni-patterns
--                       -Wmissing-export-lists
--                       -Wmissing-home-modules
--                       -Wpartial-fields
--                       -Wredundant-constraints
--                       -O2