cabal-version:      3.0
name:               day08
version:            0.1.0.0
-- synopsis:
-- description:
homepage:
    https://github.com/Noir01/advent-of-code-2024/tree/main/day08

author:             Aniruddh
maintainer:         aniruddh@noir.ac
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall -O2

executable part1
    import:           warnings
    main-is:          part1.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0, array, containers
    hs-source-dirs:   exe
    default-language: Haskell2010

executable part2
    import:           warnings
    main-is:          part2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0, array, containers
    hs-source-dirs:   exe
    default-language: Haskell2010
